adding iron flex layout to replace the standard polymer layout properties from 0.5

--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -32,5 +32,6 @@
  *= require paper-progress/paper-progress
  *= require paper-dialog/paper-action-dialog
  *= require paper-spinner/paper-spinner
+ *= require iron-flex-layout/iron-flex-layout
 
 -->
