Fixing error that polyup introduced

--- a/app/assets/components/elements/paper-url-resolver.html
+++ b/app/assets/components/elements/paper-url-resolver.html
@@ -16,9 +16,9 @@
         },
         paperType: {
           type: String,
-          value: 'arxiv'
+          value: 'arxiv',
+          notify: true 
         },
-        paperType,: { notify: true },
         paperTypedId: {
           value: null,
           notify: true
