adding quotes for property name

--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -112,7 +112,7 @@
       listeners: {
         notification: 'onNotification',
         go: 'onGo',
-        go-default: 'onGoDefault',
+        'go-default': 'onGoDefault',
         review: 'onReview'
       }
     });
