Adding a hyperlink to this GitHub repo.

--- a/app/assets/components/subpages/oj-about-page.html
+++ b/app/assets/components/subpages/oj-about-page.html
@@ -95,7 +95,7 @@
               <p>
                   The articles are open, in that all articles accepted by the Open Journal are released under a
                   Creative Commons Attribution license. The infrastructure is open too – the code running
-                  the Open Journal is available under an MIT license. The reviewer comments can be made open
+                  the Open Journal is <a href="https://github.com/openjournals/theoj">available under an MIT license</a>. The reviewer comments can be made open
                   at the joint discretion of the authors and reviewers.
               </p>
           </div>
