--- a/app/assets/components/subpages/oj-about-page.html
+++ b/app/assets/components/subpages/oj-about-page.html
@@ -28,7 +28,7 @@
           <div class="question">What can I submit to the Open Journal?</div>
           <div class="answer">
               <p>
-                If your article is posted on the astro-ph section of the arXiv,
+                If your article is posted on the astro-ph section of the arXiv, and it's in English,
                 it's an appropriate submission for the Open Journal.
               </p>
           </div>
