Adding some more details to overview page

--- a/app/views/papers/overview.html.erb
+++ b/app/views/papers/overview.html.erb
@@ -8,6 +8,8 @@
     <ul>
       <li>PDF: <%= p.document_location %></li>
       <li>Authors: <%= p.authors %></li>
+      <li>Submitting author: <%= p.submittor.name %> &middot; <%= p.submittor.email %> &middot; <%= link_to "ORCID", "http://orcid.org/#{p.submittor.uid}" %></li>
+      <li>Submitted at: <%= p.created_at %></li>
     </ul>
     <% end %>
   </div>
