Adding sha to paper

--- a/app/views/papers/overview.html.erb
+++ b/app/views/papers/overview.html.erb
@@ -4,7 +4,7 @@
   <div>
     <h3><%= papers.count %> <%= state.name %> papers</h3>
     <% papers.each do |p| %>
-    <h4>Title: <%= p.title %> (<%= p.sha %>)</h4>
+    <h4>Title: <%= p.title %> (<%= p.id %>)</h4>
     <ul>
       <li>PDF: <%= p.document_location %></li>
       <li>Authors: <%= p.authors %></li>
