Adding min-height

--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -5,6 +5,7 @@
 
         <oj-review-page-header
                 id=header
+                style="min-height: 120px"
                 user={{currentUser}}
                 paper={{paper}}
                 annotations={{annotations}}
