--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -23,6 +23,8 @@
  *= require paper-button/paper-button
  *= require paper-checkbox/paper-checkbox
  *= require paper-input/paper-input
+ *= require paper-header-panel/paper-header-panel
+ *= require paper-drawer-panel/paper-drawer-panel
  *= require paper-item/paper-item
  *= require paper-dropdown-menu/paper-dropdown-menu
  *= require paper-progress/paper-progress
