Stacked pdf reader overflow

--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -71,6 +71,10 @@
           left: -3px;
       }
 
+      stacked-pdf-reader {
+        overflow-y: visible;
+      }
+
     </style>
 
     <json-get auto=true url="{{paper_id | paperPath}}" result={{paper}}></json-get>
